=head1 Changes in the 2.8 release

=head2 Fix core dump in load from cursor

A bug in the db2Load command, introduced in the 2.7 release, caused a
load from cursor (source type "Statement") to dump core. Now fixed.

=head2 BugFix in Load / Import

A bug in the Load and Import methods prevented load/import operations
against mixed-case schema and table names (which have to be
double-quoted when passed to DB2).  Now fixed.

=head2 Add the 'ReOpt' option to the Rebind method

The re-optimization level can now be set at Rebind time.

=head1 Changes in the 2.7 release

=head2 Rename module to DB2::Admin

The modules/classes have been renamed from DB2API to DB2::Admin as
recommended by Tim Bunce.

=head2 Add "list of files" support for Load of DEL files

The Load method now supports loading a list of DEL files in a single
command.

=head2 Support new protocol, types for node directory

Support the TCP/IP v4, TCP/IP v6 and TCP/IP v4 using SOCKS protocol
types for the node directory methods.

=head1 Changes in the 2.6 release

=head2 Add XML support to Export, Import and Load methods

The Export, Import and Load methods now supports the XML options
introduced in DB2 V9.1 (Export, Import) and DB2 V9.5 (Load).  Note
that the schema-related XML validate / default / ignore / map options
are not supported at this time.

=head2 Add connect attributes

Allow the user to specify the program name and connect time-out as
connect attributes.  Default options can be set with
C<SetConnectAttributes> and per-connect options can be specified with
the C<ConnectAttr> parameter to the C<Connect> method.

The default program name is no longer C<perl> or C<perl5.8>, but the
script name (the basename of C<$0>).

=head1 Changes in the 2.5 release

=head2 Add the NoCharDel option for the import and load commands

The NoCharDel option, which is used to handle files where character
strings have no delimiters, is now supported for FileOptions